# VespeR

./: .gitignore  LICENSE  README.md  agentling.config.yaml  pyproject.toml
agentling/: __init__.py  cache.py  cli.py  config.py  desktop_app.py  graph.py  models.py  orchestrator.py  resources.py  scoring.py  ui_server.py  validators.py
agentling/agents/: __init__.py  executor.py
agentling/commands/: __init__.py  desktop.py  replay.py  run.py  ui.py
agentling/events/: __init__.py  bus.py  types.py
agentling/persistence/: __init__.py  database.py  repositories.py
agentling/persistence/migrations/: 001_initial_schema.sql  002_agents.sql  003_run_title.sql  004_session_snapshots.sql  005_run_memory_entries.sql
agentling/providers/: __init__.py  base.py  cli_provider.py  factory.py  ollama_provider.py  openai_provider.py
agentling/session/: __init__.py  git_tracker.py  interactive.py  manager.py  memory.py  model_registry.py  provider_adapter.py  pty_controller.py  stream_parser.py
agentling/web/: app.py
agentling/web/routes/: __init__.py  agents.py  control.py  events.py  execute.py  interactive.py  patterns.py  runs.py  sessions.py
agentling/web/websocket/: __init__.py  handler.py
frontend/: index.html  package-lock.json  package.json  tailwind.config.js  vite.config.ts
frontend/src/: App.tsx  index.css
frontend/src/api/: client.ts  types.ts  websocket.ts
frontend/src/lib/: models.ts
scripts/: build_macos_app.sh
tools/: capture_assets.mjs
website/: README.md  index.html  llms.txt  robots.txt  script.js  sitemap.xml  styles.css
(+16 files in other folders)
